added caption to efl30 external materials

--- a/assets/EFL30/external.html
+++ b/assets/EFL30/external.html
@@ -5,15 +5,21 @@ parent: EFL30/30C
 ---
 <head>
     <style>
-        img {margin-top: 3%; width: 80%; height: auto;}
+        figure {margin-top: 3%; width: 80%; height: auto;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
         .video {width: 100%; height: 100%; position: absolute;}
+        p {margin-top: 2%; color: brown; text-align: center;}
+        figcaption {text-align: center; margin-bottom: 2%; color: brown;}
     </style>
 </head>
 <body>
     <h2>{{page.title}}</h2>
-    <img src="\assets\EFL30\external.jpg" alt="">
+    <figure>
+        <figcaption>外接电源线和外接读头供有需要的客户选购</figcaption>
+        <img src="\assets\EFL30\external.jpg" alt="">
+    </figure>
     <div class="responsive">
+        <p>接入外接设备后，EFL30的使用方法同其他Dialock家具锁设备</p>
         <iframe src="//player.bilibili.com/player.html?aid=681831589&bvid=BV1KS4y1c7Pd&cid=515868619&page=1" scrolling="no" 
         border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
     </div>
