added words to efl30 external page

--- a/assets/EFL30/external.html
+++ b/assets/EFL30/external.html
@@ -8,8 +8,7 @@ parent: EFL30/30C
         figure {margin-top: 3%; width: 80%; height: auto;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
         .video {width: 100%; height: 100%; position: absolute;}
-        p {margin-top: 2%; color: brown; text-align: center;}
-        figcaption {text-align: center; margin-bottom: 2%; color: brown;}
+        figcaption {margin-bottom: 2%;}
     </style>
 </head>
 <body>
@@ -18,9 +17,10 @@ parent: EFL30/30C
         <figcaption>外接电源线和外接读头供有需要的客户选购</figcaption>
         <img src="\assets\EFL30\external.jpg" alt="">
     </figure>
+    <p>EFL30的使用方法同其它Dialock家具锁设备</p>
     <div class="responsive">
-        <p>接入外接设备后，EFL30的使用方法同其他Dialock家具锁设备</p>
         <iframe src="//player.bilibili.com/player.html?aid=681831589&bvid=BV1KS4y1c7Pd&cid=515868619&page=1" scrolling="no" 
         border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
     </div>
+    <p>也可点击<a href="https://www.bilibili.com/video/BV1KS4y1c7Pd?share_source=copy_web">此处</a>至B站观看此视频</p>
 </body>
