added description to videos

--- a/assets/FT200/FT200-videos-openning-time.html
+++ b/assets/FT200/FT200-videos-openning-time.html
@@ -7,11 +7,15 @@ grand_parent: FT200
 <head>
     <style>
         h2 {text-align: center;}
+
     </style>
 </head>
 <body>
     <h2>{{page.title}}</h2>
-    <div style="padding-bottom: 75%; position: relative; margin-top: 5%;">
+    <p>
+        FT200默认的自动落锁时间是3s。客户可根据需要，使用销程卡自行调节自动落锁时间。如下视频所示。
+    </p>
+    <div style="padding-bottom: 75%; position: relative; margin-top: 3%;">
         <iframe src="//player.bilibili.com/player.html?aid=893069621&bvid=BV1PP4y1J7zC&cid=480543803&page=1" 
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
         style="width: 100%; height: 100%; position: absolute;"> </iframe>
