--- a/assets/FT200/FT200-videos-two-antennas.html
+++ b/assets/FT200/FT200-videos-two-antennas.html
@@ -7,12 +7,16 @@ grand_parent: FT200
 <head>
     <style>
         .title {text-align: center;}
-        .responsive {padding-bottom: 75%; position: relative; margin-top: 5%;}
+        .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
         .video {width: 100%; height: 100%; position: absolute;}
     </style>
 </head>
 <body>
     <h2 class="title">{{page.title}}</h2>
+    <p>
+        FT200自身携带两个读头接口。两个读头的配置可以相同，同时控制四个端口。
+        也可以自定义配置，即配置指定读头控制指定端口。如下视频所示。
+    </p>
     <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=423882617&bvid=BV1g3411J78F&cid=505536329&page=1" 
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"></iframe>
