--- a/assets/emergency/aux-in.html
+++ b/assets/emergency/aux-in.html
@@ -6,13 +6,17 @@ parent: 紧急开锁/emergency
 <head>
     <style>
         h2 {text-align: center;}
-        .responsive {padding-bottom: 56.25%; position: relative; margin-top: 5%;}
+        .responsive {padding-bottom: 56.25%; position: relative; margin-top: 3%;}
         .video {width: 100%; height: 100%; position: absolute;}
     </style>
     <link rel="stylesheet" href="\css\lightbox.min.css">
 </head>
 <body>
     <h2>{{page.title}}</h2>
+    <p>
+        FT200默认使用射频技术刷卡开锁。如有需要，也可使用按压按钮（类似门铃按钮）的方式开锁。此方式可用作在卡片丢失的情况下紧急开锁。
+        如下视频所示。
+    </p>
     <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=808072458&bvid=BV1J34y1B7WW&cid=480970781&page=1" 
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
