--- a/assets/emergency/test-unit-multiple-locks.html
+++ b/assets/emergency/test-unit-multiple-locks.html
@@ -13,7 +13,10 @@ grand_parent: 紧急开锁/emergency
         </style>
     </head>
     <body>
-        <h3>{{ page.title }}</h3>
+        <h2>{{ page.title }}</h2>
+        <p>
+            下图展示了测试器连接多个锁头的连线方式。MLA6P(六路分配器)接入米白色连接器，即可实现紧急情况下，拨动测试器开关开启多个锁头。
+        </p>
         <img src="\assets\emergency\test-unit\go-to-mla6p.jpg" alt="">
         <div class="responsive">
             <iframe src="//player.bilibili.com/player.html?aid=893308883&bvid=BV1xP4y177th&cid=488375448&page=1" 
