--- a/assets/emergency/test-unit-one-lock.html
+++ b/assets/emergency/test-unit-one-lock.html
@@ -13,7 +13,12 @@ grand_parent: 紧急开锁/emergency
         </style>
     </head>
     <body>
-        <h3>{{ page.title }}</h3>
+        <h2>{{ page.title }}</h2>
+        <p>
+            下图展示了测试器连接一个锁头的连线方式。测试器连线和连接器需预先连接至FT200。
+            紧急情况下，将测试器连入系统，拨动测试器开关，即可实现紧急开锁。此方法适用于FT200无法接入电源的情况。
+            详见如下视频。
+        </p>
         <img src="\assets\emergency\test-unit\go-to-lock.jpg" alt="">
         <div class="responsive">
             <iframe src="//player.bilibili.com/player.html?aid=380778696&bvid=BV1Ff4y1F7iR&cid=488375442&page=1" 
