--- a/power-supply.html
+++ b/power-supply.html
@@ -4,5 +4,28 @@ title: 电源/power supply
 permalink: /power-supply
 has_children: true
 ---
-<h2>{{ page.title }}</h2>
-<div style="float: right; max-width: 50%; height: auto;"><img src="/assets/power-supply/power-supply.jpg" alt="power supply image"></div>
+<head>
+    <style>
+        h2 {text-align: center;}
+        table {margin-top: 5%;}
+        td {text-align: center;}
+    </style>
+</head>
+<body>
+    <h2>{{ page.title }}</h2>
+    <table>
+        <tr>
+            <th>名称</th>
+            <th>编号</th>
+        </tr>
+        <tr>
+            <td>国产电源</td>
+            <td>833.02.999</td>
+        </tr>
+        <tr>
+            <td>进口电源（德国）</td>
+            <td>237.58.180</td>
+        </tr>
+    </table>
+    <div style="float: right; max-width: 50%; height: auto;"><img src="/assets/power-supply/power-supply.jpg" alt="power supply image"></div>
+</body>
