--- a/assets/FT200/FT200-videos-decoration-key.html
+++ b/assets/FT200/FT200-videos-decoration-key.html
@@ -7,13 +7,18 @@ grand_parent: FT200
 <head>
     <style>
         .title {text-align: center;}
+        .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
+        .video {width: 100%; height: 100%; position: absolute;}
     </style>
 </head>
 <body>
     <h2 class="title">{{page.title}}</h2>
-    <div style="padding-bottom: 75%; position: relative; margin-top: 5%;">
+    <p>
+        当设备正在报警（超时未将锁头锁闭），刷摆货卡可使报警声停止。若使用摆货卡将锁头打开，锁头超时未锁闭也不会激活蜂鸣器报警。
+        当店员需要摆货，将物品取出或清洁展示柜时可以使用摆货卡将柜门打开。
+    </p>
+    <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=850478368&bvid=BV1XL4y1t7gA&cid=479263699&page=1" 
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
-        style="width: 100%; height: 100%; position: absolute;"> </iframe>
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
     </div>
 </body>
