--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -5,13 +5,16 @@ parent: app(HDM)
 ---
 <head>
     <style>
-        h3 {text-align: center;}
-        .video-wrapper {padding-bottom: 75%; position: relative; margin-top: 5%;}
+        h2 {text-align: center;}
+        .video-wrapper {padding-bottom: 75%; position: relative; margin-top: 3%;}
         .video {width: 100%; height: 100%; position: absolute;}
     </style>
 </head>
 <body>
-    <h3>使用app刷宏(add-on)</h3>
+    <h2>使用app刷宏(add-on)</h2>
+    <p>
+        Dialock二代家具锁支持导入客户指定的扩展功能。需要用到AKC, HMDM app和宏(add-on)文件。如下视频展示了导入扩展功能的操作步骤。
+    </p>
     <div class="video-wrapper">
         <iframe src="//player.bilibili.com/player.html?aid=508518740&bvid=BV1Fu411274J&cid=494750305&page=1" 
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
