--- a/assets/emergency/external-power.html
+++ b/assets/emergency/external-power.html
@@ -39,6 +39,9 @@ parent: 紧急开锁/emergency
             </tr>
         </table>
         <p>请点击<a href="\assets\emergency\external-power\schematic.pdf">此处</a>查看安装示意图</p>
+        <p>
+            应急电源连接线需预先连接至控制器。连线方式如下图。供电故障发生时，将下图蓝色接口接入应急电源，即可为系统临时供电。
+        </p>
         <div class="responsive"><img src="\assets\emergency\external-power\power-supply.jpg" alt=""></div>
     </body>
 </html>
