added a video in english to video page

--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -8,6 +8,7 @@ parent: app(HDM)
         h2 {text-align: center;}
         .video-wrapper {padding-bottom: 75%; position: relative; margin-top: 3%;}
         .video {width: 100%; height: 100%; position: absolute;}
+        b {color: brown;}
     </style>
 </head>
 <body>
@@ -15,9 +16,16 @@ parent: app(HDM)
     <p>
         Dialock二代家具锁支持导入客户指定的扩展功能。需要用到AKC, HMDM app和宏(add-on)文件。如下视频展示了导入扩展功能的操作步骤。
     </p>
+    <b>以下为中文操作视频</b>
     <div class="video-wrapper">
         <iframe src="//player.bilibili.com/player.html?aid=508518740&bvid=BV1Fu411274J&cid=494750305&page=1" 
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
     </div>
     <p>也可点击<a href="https://www.bilibili.com/video/BV1Fu411274J?share_source=copy_web">此处</a>至B站观看此视频</p>
+    <b>the video with narrator in English</b>
+    <div class="video-wrapper">
+        <iframe src="//player.bilibili.com/player.html?aid=636965905&bvid=BV1qb4y1x7AP&cid=541172847&page=1" 
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
+    </div>
+    <p>you can also click <a href="https://www.bilibili.com/video/BV1qb4y1x7AP?share_source=copy_web">here</a> to watch this video on bilibili</p>
 </body>
