adjusted the gap between the 1st paragraph and title

--- a/assets/FT200/FT200-videos-decoration-key.html
+++ b/assets/FT200/FT200-videos-decoration-key.html
@@ -13,7 +13,7 @@ grand_parent: FT200
 </head>
 <body>
     <h2 class="title">{{page.title}}</h2>
-    <p>
+    <p style="margin-top: 3%;">
         当设备正在报警（超时未将锁头锁闭），刷摆货卡可使报警声停止。若使用摆货卡将锁头打开，锁头超时未锁闭也不会激活蜂鸣器报警。
         当店员需要摆货，将物品取出或清洁展示柜时可以使用摆货卡将柜门打开。
     </p>
