--- a/assets/FT200/FT200-videos-openning-time.html
+++ b/assets/FT200/FT200-videos-openning-time.html
@@ -12,7 +12,7 @@ grand_parent: FT200
 </head>
 <body>
     <h2>{{page.title}}</h2>
-    <p>
+    <p style="margin-top: 3%;">
         FT200默认的自动落锁时间是3s。客户可根据需要，使用销程卡自行调节自动落锁时间。如下视频所示。
     </p>
     <div style="padding-bottom: 75%; position: relative; margin-top: 3%;">
