--- a/assets/FT200/FT200-videos-remote-reset.html
+++ b/assets/FT200/FT200-videos-remote-reset.html
@@ -13,7 +13,8 @@ grand_parent: FT200
 </head>
 <body>
     <h2>{{page.title}}</h2>
-    <p>使用<a href="/app_files">HMDM app</a>和AKC, 可以在无需拆柜体，无需接触控制器的情况下，将控制器复位。
+    <p style="margin-top: 3%;">
+        使用<a href="/app_files">HMDM app</a>和AKC, 可以在无需拆柜体，无需接触控制器的情况下，将控制器复位。
         该操作需要用到AKC和编程卡，使得可以既安全又便利的执行复位操作。
         该视频中产品为EFL30，Dialock二代家具锁产品（包括FT200）均支持此功能。
     </p>
