--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -13,7 +13,7 @@ parent: app(HDM)
 </head>
 <body>
     <h2>使用app刷宏(add-on)</h2>
-    <p>
+    <p style="margin-top: 3%;">
         Dialock二代家具锁支持导入客户指定的扩展功能。需要用到AKC, HMDM app和宏(add-on)文件。如下视频展示了导入扩展功能的操作步骤。
     </p>
     <b>以下为中文操作视频</b>
