--- a/assets/power-supply/domestics/catalogs.html
+++ b/assets/power-supply/domestics/catalogs.html
@@ -4,7 +4,11 @@ title: 单页/catalog
 parent: 国产电源/domestics
 grand_parent: 电源/power supply
 ---
-<h2>{{page.title}}</h2>
-<ul>
-    <li><a href="\assets\power-supply\domestics\domestics-catalog.pdf">中文单页</a></li>
-</ul>
+<head>
+    <style>
+    </style>
+</head>
+<body>
+    <h2>{{page.title}}</h2>
+    <p style="margin-top: 3%;">请点击<a href="\assets\power-supply\domestics\domestics-catalog.pdf">此处</a>下载中文单页</p>
+</body>
