--- a/assets/FT200/FT200-videos-two-antennas.html
+++ b/assets/FT200/FT200-videos-two-antennas.html
@@ -13,7 +13,7 @@ grand_parent: FT200
 </head>
 <body>
     <h2 class="title">{{page.title}}</h2>
-    <p>
+    <p style="margin-top: 3%;">
         FT200自身携带两个读头接口。两个读头的配置可以相同，同时控制四个端口。
         也可以自定义配置，即配置指定读头控制指定端口。如下视频所示。
     </p>
