--- a/assets/emergency/aux-in.html
+++ b/assets/emergency/aux-in.html
@@ -13,7 +13,7 @@ parent: 紧急开锁/emergency
 </head>
 <body>
     <h2>{{page.title}}</h2>
-    <p>
+    <p style="margin-top: 3%;">
         FT200默认使用射频技术刷卡开锁。如有需要，也可使用按压按钮（类似门铃按钮）的方式开锁。此方式可用作在卡片丢失的情况下紧急开锁。
         如下视频所示。
     </p>
