--- a/assets/emergency/test-unit-multiple-locks.html
+++ b/assets/emergency/test-unit-multiple-locks.html
@@ -14,7 +14,7 @@ grand_parent: 紧急开锁/emergency
     </head>
     <body>
         <h2>{{ page.title }}</h2>
-        <p>
+        <p style="margin-top: 3%;">
             下图展示了测试器连接多个锁头的连线方式。MLA6P(六路分配器)接入米白色连接器，即可实现紧急情况下，拨动测试器开关开启多个锁头。
         </p>
         <img src="\assets\emergency\test-unit\go-to-mla6p.jpg" alt="">
