--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 操作视频/Video
+title: 导入宏/loading add-on
 parent: app(HDM)
 ---
 <head>
@@ -12,7 +12,7 @@ parent: app(HDM)
     </style>
 </head>
 <body>
-    <h2>使用app刷宏(add-on)</h2>
+    <h2>{{ page.title }}</h2>
     <p style="margin-top: 3%;">
         Dialock二代家具锁支持导入客户指定的扩展功能。需要用到AKC, HMDM app和宏(add-on)文件。如下视频展示了导入扩展功能的操作步骤。
     </p>
