added table for main page of 700 and 710

--- a/DT710.html
+++ b/DT710.html
@@ -8,6 +8,7 @@ has_children: true
     <style>
         .responsive {float: right; width: 50%; height: auto;}
         .title {color: #991601;}
+        th {text-align: left;}
     </style>
 </head>
 <body>
@@ -17,5 +18,49 @@ has_children: true
             {{ page.title }}
         </a>
     </h2>
+    <table>
+        <caption>
+            <b>典型组件</b>
+        </caption>
+        <tr>
+            <th>名称</th>
+            <th>编号</th>
+            <th>数量</th>
+        </tr>
+        <tr>
+            <td>前后模块</td>
+            <td>917.64.000</td>
+            <td>1套</td>
+        </tr>
+        <tr>
+            <td>锁体</td>
+            <td>917.81.791</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>锁芯</td>
+            <td>916.80.221</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>方杆包</td>
+            <td>917.80.831</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>螺丝包</td>
+            <td>917.80.851</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>电池（1.5V AA）</td>
+        </tr>
+        <tr>
+            <td>卡片</td>
+        </tr>
+        <tr>
+            <td>管理软件（根据需求选购）</td>
+        </tr>
+    </table>
     <div class="responsive"><img src="\assets\DT710\dt710.jpg" alt=""></div>
 </body>
