added fcc certificate for ft120

--- a/FT120.html
+++ b/FT120.html
@@ -24,6 +24,8 @@ has_children: true
                 <td>237.58.111</td>
             </tr>
         </table>
+        <p>该产品已取得FCC认证，请点击<a href="assets\FT120\fcc.pdf">此处</a>下载证书</p>
+        <p>请点击<a href="https://apps.fcc.gov/oetcf/eas/reports/ViewExhibitReport.cfm?mode=Exhibits&RequestTimeout=500&calledFromFrame=N&application_id=1pe0Y6A2kgR9I8D6Uz7BzQ%3D%3D&fcc_id=TCN006">此处</a>查看认证详细资料</p>
         <div class="responsive"><img src="/assets/FT120/FT120.jpg" alt=""></div>
     </body>
 </html>
