added table to the main pages for some products

--- a/WT210.html
+++ b/WT210.html
@@ -9,13 +9,47 @@ has_children: true
         <style>
             .responsive {float: right; width: 35%; height: auto;}
             .title {color: #991601;}
+            table {margin-top: 5%;}
         </style>
+        <link rel="stylesheet" href="\css\lightbox.min.css">
     </head>
     <body>
         <h2><a class="title"
             href="https://www.hafele.com.de/en/product/wall-terminal-wt-210-dialock-for-indoor-or-outdoor-use/P-01238689/#SearchParameter=&@QueryTerm=wt210&Category=xagKAOsCLs8AAAF8v.4pXFSd&@P.FF.followSearch=9688&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=3&PDP=true">
             {{ page.title }}</a>
         </h2>
+        <table>
+            <caption>WT210门禁产品组合</caption>
+            <tr>
+                <th>名称</th>
+                <th>编号</th>
+                <th>数量</th>
+            </tr>
+            <tr>
+                <td>门禁/WT210</td>
+                <td>917.91.077</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.hafele.com.de/en/product/electric-strikes-dorma/P-00872529/">电插锁/strike</a></td>
+                <td>911.68.019 </td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td><a href="/power-supply">电源</a></td>
+                <td>833.02.999 </td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td><a href="\assets\FT200\key.jpg" data-lightbox="key">卡片</a></td>
+                <td>根据标准(Mifare 或 Tag-it)，款式和颜色确定
+                    <a href="\assets\FT200\catalog\fancy-key-cards.pdf">编号</a>
+                </td>
+            </tr>
+        </table>
+        <p>请客户自主选购出门按钮</p>
+        <p>点击<a href="\assets\WT210\wt210-catalog.pdf">此处</a>查看产品单页</p>
         <div class="responsive"><img src="/assets/WT210/wt210.jpg" alt=""></div>
+        <script src="\js\lightbox-plus-jquery.js"></script>
     </body>
 </html>
