modified the layout of efl3 efl30 main page

--- a/EFL3.html
+++ b/EFL3.html
@@ -7,7 +7,6 @@ has_children: false
 <html>
     <head>
         <style>
-            .responsive {width: 35%; height: auto;}
             .title {color: #991601;}
             table {text-align: left; table-layout: auto; width: fit-content;}
             .column {
@@ -42,7 +41,10 @@ has_children: false
                 <td>237.59.001</td>
             </tr>
             <tr>
-                <td>锁片</td>
+                <td><a href="https://www.hafele.com.de/en/product/locking-component-for-efl-3-3c-dialock-furniture-locks-tolerance-compensation-in-lowering-direction-for-screw-fixing/P-01319538/">
+                    锁片
+                    </a>
+                </td>
                 <td>237.59.028</td>
             </tr>
         </table>
