--- a/EFL30.html
+++ b/EFL30.html
@@ -39,6 +39,10 @@ has_children: true
                 <td>237.59.102</td>
             </tr>
         </table>
+        <ul>
+            <li><a href="/assets/EFL30/catalog/EFL30中文单页.pdf">中文单页</a></li>
+            <li><a href="/assets/EFL30/catalog/EFL30英文单页.pdf">英文单页</a></li>
+        </ul>
         <div class="responsive"><img src="/assets/EFL30/EFL30.jpg" alt=""></div>
     </body>
 </html>
