added add-on file

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -19,6 +19,7 @@ grand_parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 430.dlkAddon">430-432</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 433.dlkAddon">433-435</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 622.dlkAddon">622-624</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 625.dlkAddon">625-627</a></li>
     </ul>
 </body>
 
