added head tag in the file

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -4,6 +4,7 @@ title: FT200功能扩展
 parent: 功能扩展文件/Add-on
 grand_parent: app(HDM)
 ---
+<head></head>
 <body>
     <h3>请根据对应的AKC序列号，点击以下链接下载add-on</h3>
     <ul>
