added link for module on dt700 main page

--- a/DT700.html
+++ b/DT700.html
@@ -28,7 +28,10 @@ has_children: true
             <th>数量</th>
         </tr>
         <tr>
-            <td>前后模块</td>
+            <td>
+                <a href="\assets\DT700\modules.html">前后模块</a>
+                
+            </td>
             <td>917.64.006</td>
             <td>1套</td>
         </tr>
