--- a/DT710.html
+++ b/DT710.html
@@ -33,7 +33,9 @@ has_children: true
             <td>1套</td>
         </tr>
         <tr>
-            <td>锁体</td>
+            <td>
+                <a href="\assets\DT700\lock.html">锁体</a>
+            </td>
             <td>917.81.791</td>
             <td>1</td>
         </tr>
@@ -43,12 +45,16 @@ has_children: true
             <td>1</td>
         </tr>
         <tr>
-            <td>方杆包</td>
+            <td>
+                <a href="\assets\DT700\fittings.html">方杆包</a>
+            </td>
             <td>917.80.831</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>螺丝包</td>
+            <td>
+                <a href="\assets\DT700\fittings.html">螺丝包</a>
+            </td>
             <td>917.80.851</td>
             <td>1</td>
         </tr>
@@ -62,5 +68,6 @@ has_children: true
             <td>管理软件（根据需求选购）</td>
         </tr>
     </table>
+    <p>DT710与DT700使用相同的锁体，锁芯和配件</p>
     <div class="responsive"><img src="\assets\DT710\dt710.jpg" alt=""></div>
 </body>
