--- a/FT120.html
+++ b/FT120.html
@@ -2,7 +2,7 @@
 layout: page
 title: FT120
 permalink: /FT120/
-has_children: true
+has_children: false
 ---
 <html>
     <head>
@@ -11,6 +11,10 @@ has_children: true
             .title {color: #991601;}
             table {text-align: left; table-layout: auto; width: fit-content;}
             th {width: 20%;}
+            .doc {
+                float: left;
+                width: 50%;
+            }
         </style>
     </head>
     <body>
@@ -24,8 +28,13 @@ has_children: true
                 <td>237.58.111</td>
             </tr>
         </table>
-        <p>该产品已取得FCC认证，请点击<a href="/assets/FT120/fcc.pdf">此处</a>下载证书</p>
-        <p>请点击<a href="https://apps.fcc.gov/oetcf/eas/reports/ViewExhibitReport.cfm?mode=Exhibits&RequestTimeout=500&calledFromFrame=N&application_id=1pe0Y6A2kgR9I8D6Uz7BzQ%3D%3D&fcc_id=TCN006">此处</a>查看认证详细资料</p>
+        <div class="doc">
+            <p>该产品已取得FCC认证，请点击<a href="/assets/FT120/fcc.pdf">此处</a>下载证书</p>
+            <p>请点击
+                <a href="https://apps.fcc.gov/oetcf/eas/reports/ViewExhibitReport.cfm?mode=Exhibits&RequestTimeout=500&calledFromFrame=N&application_id=1pe0Y6A2kgR9I8D6Uz7BzQ%3D%3D&fcc_id=TCN006">此处</a>查看认证详细资料
+            </p>
+            <p>点击<a href="/assets/FT120/catalog/FT120英文单页.pdf">此处</a>查看产品单页</p>
+        </div>
         <div class="responsive"><img src="/assets/FT120/FT120.jpg" alt=""></div>
     </body>
 </html>
