--- a/assets/DT700/lock.html
+++ b/assets/DT700/lock.html
@@ -2,6 +2,7 @@
 layout: page
 title: 锁体/lock
 parent: DT700
+nav_order: 2
 ---
 <head>
     <style>
@@ -111,6 +112,16 @@ parent: DT700
             <button class="navigation" id="try_again">重新选择</button>
         </div>
     </div>
-    
+    <div>
+        <p>请点击如下链接查看 {{page.title}} 相关单页</p>
+        <ul>
+            <li>
+                <a href="\assets\DT700\components-details.pdf">DT700/710部件明细(英文)</a>
+            </li>
+            <li>
+                <a href="\assets\DT700\components-details-cn.pdf">DT700/710部件明细(中文)</a>
+            </li>
+        </ul>
+    </div>
     <script src="\js\dt700_lock_selection.js"></script>
 </body>
