--- a/assets/DT700/modules.html
+++ b/assets/DT700/modules.html
@@ -2,6 +2,7 @@
 layout: page
 title: 内外模块/modules
 parent: DT700
+nav_order: 1
 ---
 <head>
     <style>
@@ -122,6 +123,17 @@ parent: DT700
             <img src="\assets\DT700\right_outwards.jpg" alt="">
             <figcaption>右外开</figcaption>
         </figure>
+    </div>
+    <div>
+        <p>请点击如下链接查看 {{page.title}} 相关单页</p>
+        <ul>
+            <li>
+                <a href="\assets\DT700\dt700-synopsis.pdf">DT700概览(英文)</a>
+            </li>
+            <li>
+                <a href="\assets\DT700\dt700-synopsis-cn.pdf">DT700概览(中文)</a>
+            </li>
+        </ul>
     </div>
     <script src="\js\dt700_module_selection.js"></script>
 </body>
