--- a/FT120.html
+++ b/FT120.html
@@ -1,13 +1,12 @@
 ---
 layout: page
 title: FT120
-permalink: /FT120/
-has_children: true
+permalink: /FT120
 ---
 <html>
     <head>
         <style>
-            .responsive {float: right; width: 50%; height: auto;}
+            img {width: 50%; height: auto; float: right;}
             .title {color: #991601;}
             table {text-align: left; table-layout: auto; width: fit-content;}
             th {width: 20%;}
@@ -35,6 +34,6 @@ has_children: true
             </p>
             <p>点击<a href="/assets/FT120/catalog/FT120英文单页.pdf">此处</a>查看产品单页</p>
         </div>
-        <div class="responsive"><img src="/assets/FT120/FT120.jpg" alt=""></div>
+        <img src="/assets/FT120/FT120.jpg" alt="">
     </body>
 </html>
