--- a/FT120.html
+++ b/FT120.html
@@ -6,7 +6,7 @@ permalink: /FT120
 <html>
     <head>
         <style>
-            img {width: 50%; height: auto; float: right;}
+            img {width: 50%; height: auto;}
             .title {color: #991601;}
             table {text-align: left; table-layout: auto; width: fit-content;}
             th {width: 20%;}
@@ -27,13 +27,11 @@ permalink: /FT120
                 <td>237.58.111</td>
             </tr>
         </table>
-        <div class="doc">
-            <p>该产品已取得FCC认证，请点击<a href="/assets/FT120/fcc.pdf">此处</a>下载证书</p>
-            <p>请点击
-                <a href="https://apps.fcc.gov/oetcf/eas/reports/ViewExhibitReport.cfm?mode=Exhibits&RequestTimeout=500&calledFromFrame=N&application_id=1pe0Y6A2kgR9I8D6Uz7BzQ%3D%3D&fcc_id=TCN006">此处</a>查看认证详细资料
-            </p>
-            <p>点击<a href="/assets/FT120/catalog/FT120英文单页.pdf">此处</a>查看产品单页</p>
-        </div>
+        <p>该产品已取得FCC认证，请点击<a href="/assets/FT120/fcc.pdf">此处</a>下载证书，
+            点击<a href="https://apps.fcc.gov/oetcf/eas/reports/ViewExhibitReport.cfm?mode=Exhibits&RequestTimeout=500
+            &calledFromFrame=N&application_id=1pe0Y6A2kgR9I8D6Uz7BzQ%3D%3D&fcc_id=TCN006">此处</a>查看认证详细资料
+        </p>
+        <p>点击<a href="/assets/FT120/catalog/FT120英文单页.pdf">此处</a>查看产品单页</p>
         <img src="/assets/FT120/FT120.jpg" alt="">
     </body>
 </html>
