modified lock quiz

--- a/assets/DT700/lock.html
+++ b/assets/DT700/lock.html
@@ -13,9 +13,8 @@ nav_order: 2
             text-align: center;
             background-color: beige;
         }
-        .question_container {
-            font-size: large; 
-            margin-bottom: 3%;
+        .option_container {
+            margin-top: 2%;
         }
         .selected_container {
             padding-top: 1%;
