modified format of quiz

--- a/assets/DT700/modules.html
+++ b/assets/DT700/modules.html
@@ -14,16 +14,16 @@ nav_order: 1
             width:auto;
             background-color:beige;
             text-align: center;
-            margin-top: 3%;
-        }
-        .question-container {
-            font-size:larger;
+            margin-top: 1%;
         }
         .option {
-            margin:3%;
+            margin:1%;
         }
         #selected, #result, #try_again {
-            margin: 3%;
+            margin: 1%;
+        }
+        #result {
+            color: brown;
         }
         .column_3 {
             float: left;
