--- a/assets/DT700/modules.html
+++ b/assets/DT700/modules.html
@@ -9,6 +9,9 @@ nav_order: 1
         h3 {
             color: darkred;
         }
+        b {
+            color: brown;
+        }
         .panel {
             overflow: auto;
             width:auto;
@@ -19,10 +22,13 @@ nav_order: 1
         .option {
             margin:1%;
         }
-        #selected, #result, #try_again {
-            margin: 1%;
+        .option-container {
+            margin-top: 2%;
         }
-        #result {
+        .navigation_container {
+            margin-top: 2%;
+        }
+        .result {
             color: brown;
         }
         .column_3 {
@@ -53,7 +59,18 @@ nav_order: 1
 </head>
 <body>
     <h2>{{ page.title }}</h2>
-    <h3>内外模块的外形尺寸如下图所示：</h3>
+    <h3>DT700/710外观如下图所示：</h3>
+    <div class="row">
+        <figure class="column_2">
+            <img src="\assets\DT700\DT700.jpg" alt="">
+            <figcaption>DT700</figcaption>
+        </figure>
+        <figure class="column_2">
+            <img src="\assets\DT700\DT710.jpg" alt="">
+            <figcaption>DT710</figcaption>
+        </figure>
+    </div>
+    <h3>DT700内外模块的外形尺寸如下图所示：</h3>
     <div class="row">
         <figure class="column_2">
             <img src="\assets\DT700\inside_dimension.jpg" alt="">
@@ -62,6 +79,18 @@ nav_order: 1
 
         <figure class="column_2">
             <img src="\assets\DT700\outside_dimension.jpg" alt="">
+            <figcaption>外模块</figcaption>
+        </figure>
+    </div>
+    <h3>DT710内外模块的外形尺寸如下图所示：</h3>
+    <div class="row">
+        <figure class="column_2">
+            <img src="\assets\DT700\inside_dimension.jpg" alt="">
+            <figcaption>内模块</figcaption>
+        </figure>
+
+        <figure class="column_2">
+            <img src="\assets\DT700\outside_dimension_dt710.jpg" alt="">
             <figcaption>外模块</figcaption>
         </figure>
     </div>
@@ -84,24 +113,46 @@ nav_order: 1
         </figure>
     </div>
 
-    <p>我们提供不锈钢原色，黑色，抛光黄铜色，抛光原色四种颜色，请使用以下选型问答确定您需订购的编号</p>
+    <p>我们提供不锈钢原色，黑色，抛光黄铜色，抛光原色四种颜色，请使用以下选型问答确定<b>DT700</b> 前后模块的编号</p>
     <div class="panel">
-        <div class="question-container" id="question">
+        <div class="question-container" id="question_dt700">
             questions go here.
         </div>
-        <div class="option-container" id="option">
-            <button class="option" onclick="" id="op1">option1</button>
-            <button class="option" onclick="" id="op2">option2</button>
-            <button class="option" onclick="" id="op3">option3</button>
-            <button class="option" onclick="" id="op4">option4</button>
+        <div class="option-container" id="option_dt700">
+            <button class="option" onclick="" id="op0_dt700">option0</button>
+            <button class="option" onclick="" id="op1_dt700">option1</button>
+            <button class="option" onclick="" id="op2_dt700">option2</button>
+            <button class="option" onclick="" id="op3_dt700">option3</button>
         </div>
-        <div id="selected">
-            <p id="selected_color"></p>
-            <p id="selected_shape"></p>
+        <div id="selected_dt700">
+            <p id="selected_color_dt700"></p>
+            <p id="selected_shape_dt700"></p>
         </div>
-        <div id="result"></div>
-        <div id="try_again">
-            <button>重新选择</button>
+        <div class="result" id="result_dt700"></div>
+        <div class="navigation_container" id="navigation_dt700">
+            <button id="last_one_dt700">上一题</button>
+            <button id="try_again_dt700">重新选择</button>
+        </div>
+	</div>
+    <p>使用以下选型问答确定<b>DT710</b> 前后模块的编号</p>
+    <div class="panel">
+        <div class="question-container" id="question_dt710">
+            questions go here.
+        </div>
+        <div class="option-container" id="option_dt710">
+            <button class="option" onclick="" id="op0_dt710">option0</button>
+            <button class="option" onclick="" id="op1_dt710">option1</button>
+            <button class="option" onclick="" id="op2_dt710">option2</button>
+            <button class="option" onclick="" id="op3_dt710">option3</button>
+        </div>
+        <div id="selected_dt710">
+            <p id="selected_color_dt710"></p>
+            <p id="selected_shape_dt710"></p>
+        </div>
+        <div class="result" id="result_dt710"></div>
+        <div class="navigation_container" id="navigation_dt710">
+            <button id="last_one_dt710">上一题</button>
+            <button id="try_again_dt710">重新选择</button>
         </div>
 	</div>
     <h3>判断开门方向</h3>
@@ -127,12 +178,10 @@ nav_order: 1
     <div>
         <p>请点击如下链接查看 {{page.title}} 相关单页</p>
         <ul>
-            <li>
-                <a href="\assets\DT700\dt700-synopsis.pdf">DT700概览(英文)</a>
-            </li>
-            <li>
-                <a href="\assets\DT700\dt700-synopsis-cn.pdf">DT700概览(中文)</a>
-            </li>
+            <li><a href="\assets\DT700\dt700-synopsis.pdf">DT700概览（英文）</a></li>
+            <li><a href="\assets\DT700\dt700-synopsis-cn.pdf">DT700概览（中文）</a></li>
+            <li><a href="\assets\DT700\dt710_synopsis_en.pdf">DT710概览（英文）</a></li>
+            <li><a href="\assets\DT700\dt710-synopsis-cn.pdf">DT710概览（中文）</a></li>
         </ul>
     </div>
     <script src="\js\dt700_module_selection.js"></script>
