added effect of pop-up image to dt700/710 page

--- a/app(HDM).html
+++ b/app(HDM).html
@@ -22,9 +22,7 @@ has_children: true
             <th>数量</th>
         </tr>
         <tr>
-            <td>
-                <a href="\assets\app-hdm\akc.jpg" data-lightbox="akc">AKC(编程卡片)</a>
-            </td>
+            <td><a href="\assets\app-hdm\akc.jpg" data-lightbox="akc">AKC(编程卡片)</a></td>
             <td>917.64.980</td>
             <td>1套(3张)</td>
         </tr>
