--- a/assets/emergency/test-unit.html
+++ b/assets/emergency/test-unit.html
@@ -21,23 +21,17 @@ has_children: true
             <th>数量</th>
         </tr>
         <tr>
-            <td>
-                <a href="\assets\emergency\test-unit\emergency-openning-cable.jpg" data-lightbox="test-unit-combo">紧急开启连接线</a>
-            </td>
+            <td><a href="\assets\emergency\test-unit\emergency-openning-cable.jpg" data-lightbox="test-unit-combo">紧急开启连接线</a></td>
             <td>910.51.094</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>
-                <a href="\assets\emergency\test-unit\adapter.jpg" data-lightbox="test-unit-combo">连接器(米白色)</a>
-            </td>
+            <td><a href="\assets\emergency\test-unit\adapter.jpg" data-lightbox="test-unit-combo">连接器(米白色)</a></td>
             <td>237.56.370</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>
-                <a href="\test-unit">测试器</a>
-            </td>
+            <td><a href="\test-unit">测试器</a></td>
             <td>237.56.993</td>
             <td>1</td>
         </tr>
